Archive/d3d3b672f969911e1c87e88c224fd033-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:54:13: error: 'e1' was not declared in this scope
   A m_a3[2]{e1, e2};       // InitializerList_t(1, 2)                                             => each element is copy initialized:
             ^
main.cpp:54:17: error: 'e2' was not declared in this scope
   A m_a3[2]{e1, e2};       // InitializerList_t(1, 2)                                             => each element is copy initialized:
                 ^
main.cpp:56:19: error: could not convert '{{1, 2}, 3}' from '<brace-enclosed initializer list>' to 'A'
   A m_a4{{1, 2}, 3};       // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                   ^
main.cpp:58:15: error: array must be initialized with a brace-enclosed initializer
   A m_a5[2] = m_a1;        // m_a1                                                                => ill-formed; array initialization requires curly braces
               ^
main.cpp: In constructor 'X::X(int)':
main.cpp:39:21: error: invalid initializer for array member 'A X::m_a3 [2]'
     , m_a6{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
